# R2D2-PI-Server

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
conf/: nginx.conf  supervisor.conf  uvicorn.env
src/r2d2_server/: __init__.py  camera_stream.py  controller.py  logging_config.py  main.py  motor_controller.py  proximity_controller.py
src/r2d2_server/ui/: app.js  index.html  styles.css
tests/: test_motor_controller.py  test_ping.py  test_proximity_controller.py
