[project]
name = "r2d2-server"
version = "0.1.0"
description = "FastAPI service for r2d2-server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.0",
    "gpiozero>=2.0.1",
    "uvicorn[standard]>=0.35.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "mypy>=1.16.0",
    "pre-commit>=4.2.0",
    "pytest>=8.4.0",
    "ruff>=0.12.0",
]

[tool.ruff]
line-length = 88
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "A",
    "ANN",
    "B",
    "C4",
    "E",
    "F",
    "I",
    "N",
    "PT",
    "RUF",
    "S",
    "SIM",
    "UP",
    "W",
]
ignore = [
    "S101",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN201"]

[tool.mypy]
python_version = "3.13"
strict = true
files = ["src"]

[[tool.mypy.overrides]]
module = ["gpiozero"]
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["src/r2d2_server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
